# ml-course

./: main.ipynb  main.py  pyproject.toml
articule studying/: topic2part2article.ipynb  topic3article.ipynb
topic 1/: main.ipynb  topic1.ipynb
topic 2/: topic2.ipynb
topic 3/: topic 3.ipynb
