[project]
name = "ml-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "decisiontreeclassifier>=0.0.7",
    "graphviz>=0.21",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pydotplus>=2.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
